# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by setuptools_scm
name = "hypexport"
# common/DAL dependencies
dependencies = []
requires-python = ">= 3.9"

## these need to be set if you're planning to upload to pypi
description = "Export and access your Hypothes.is data"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]


[project.urls]
Homepage = "https://github.com/karlicoss/hypexport"
##

[project.optional-dependencies]
export = [
    # dependency of Hypothesis API
    # todo sadly, the API itself is not a python package, so checked it out as a submodule.. would be nice to convert?
    "requests",
]
optional = [
    "orjson",
    "colorlog",
    "ijson",  # faster iterative json processing
]

[dependency-groups]
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]


[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"

# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []
