# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "hypexport"
# common/DAL dependencies
dependencies = []
requires-python = ">= 3.9"

## these need to be set if you're planning to upload to pypi
description = "Export and access your Hypothes.is data"
license = {file = "LICENSE"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]


[project.urls]
Homepage = "https://github.com/karlicoss/hypexport"
##

[project.optional-dependencies]
export = [
    # dependency of Hypothesis API
    # todo sadly, the API itself is not a python package, so checked it out as a submodule.. would be nice to convert?
    "requests",
]
optional = [
    "orjson",
    "colorlog",
    "ijson",  # faster iterative json processing
]

[dependency-groups]
# TODO: not sure, on the one hand could just use 'standard' dev dependency group
# On the other hand, it's a bit annoying that it's always included by default? 
# To make sure it's not included, need to use `uv run --exact --no-default-groups ...`
testing = [
    "pytest",
    "ruff",
    "mypy",
    "lxml", # for mypy html coverage

    "ty>=0.0.1a14",
]


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/hypexport"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
